// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CLEAR_ERROR 1`] = `
Object {
  "account": null,
  "isLoading": false,
  "isLoginFailure": false,
  "password": "",
  "username": "",
}
`;

exports[`LOGIN_FAILURE 1`] = `
Object {
  "account": null,
  "isLoading": false,
  "isLoginFailure": true,
  "password": "",
  "username": "",
}
`;

exports[`LOGIN_REQUEST 1`] = `true`;

exports[`SET_ACCOUNT 1`] = `
Object {
  "account": Object {
    "account": "akameco",
    "id": "19785907",
    "isMailAuthorized": true,
    "isPremium": false,
    "mailAddress": "fake@fake.com",
    "name": "akameco",
    "profileImageUrls": Object {
      "px16x16": "imgurl",
      "px170x170": "imgurl",
      "px50x50": "imgurl",
    },
    "xRestrict": 2,
  },
  "isLoading": false,
  "isLoginFailure": false,
  "password": "",
  "username": "",
}
`;

exports[`SET_AUTH 1`] = `
Object {
  "account": null,
  "isLoading": false,
  "isLoginFailure": false,
  "password": "world",
  "username": "hello",
}
`;

exports[`default action 1`] = `
Object {
  "account": null,
  "isLoading": false,
  "isLoginFailure": false,
  "password": "",
  "username": "",
}
`;
